<resources>
    <string name="app_name">Implicit Intents</string>
    <string	name="edittext_uri">http://developer.android.com</string>
    <string	name="button_url">Open	Website</string>
    <string	name="edittext_loc">Golden	Gate	Bridge</string>
    <string	name="button_loc">Open	Location</string>
    <string	name="edittext_share">\'Twas	brillig	and	the	slithy	toves</string>
    <string	name="button_share">Share	This	Text</string>
    <string name="edittext_url">edittext_url</string>

</resources>
